feat: swagger actualizado
